force-app/main/default/objects/Demo_Setup_Recruit_Question__c/Demo_Setup_Recruit_Question__c.object-meta.xml
<CustomObject>
    <label>Demo Setup Recruit Question</label>
    <nameField>
        <label>Demo Setup Recruit Questions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Setup Recruit Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>