force-app/main/default/objects/Demo_Setup_Recruit_Question__c/fields/Answer_Score__c.field-meta.xml
<CustomField>
    <fullName>Answer_Score__c</fullName>
    <inlineHelpText>Enter a comma separated list of scores in the same order as the list of values for answers.  The score will be based on the answer selected.</inlineHelpText>
    <label>Answer Score</label>
    <length>25</length>
    <type>Text</type>
</CustomField>