force-app/main/default/objects/Demo_Setup_Recruit_Question__c/fields/Default_Answer__c.field-meta.xml
<CustomField>
    <fullName>Default_Answer__c</fullName>
    <label>Default Answer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>