force-app/main/default/objects/Demo_Setup_Recruit_Question__c/fields/Default_Answer_Score__c.field-meta.xml
<CustomField>
    <fullName>Default_Answer_Score__c</fullName>
    <description>This value is used to score the question in the one-click flow to create the recruit (not the recruit lead form)</description>
    <inlineHelpText>This value is used to score the question in the one-click flow to create the recruit (not the recruit lead form)</inlineHelpText>
    <label>Default Answer Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>