force-app/main/default/objects/Demo_Setup_Recruit_Question__c/fields/Demo_Setup_Name__c.field-meta.xml
<CustomField>
    <fullName>Demo_Setup_Name__c</fullName>
    <label>Demo Setup Name</label>
    <referenceTo>Demo_Setup__c</referenceTo>
    <relationshipLabel>Demo Setup Recruit Questions</relationshipLabel>
    <relationshipName>Demo_Setup_Recruit_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>