force-app/main/default/objects/Demo_Setup_Recruit_Question__c/fields/Demo_Setup_Recruit_Answer_s__c.field-meta.xml
<CustomField>
    <fullName>Demo_Setup_Recruit_Answer_s__c</fullName>
    <inlineHelpText>Enter a comma separated list of values (Yes, No, Maybe) for the recruit to select from.</inlineHelpText>
    <label>Demo Setup Recruit Answer(s)</label>
    <length>90</length>
    <type>Text</type>
</CustomField>