force-app/main/default/objects/Demo_Setup_Recruit_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Demo_Setup_Name__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>